Fixed css alignment of background image

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -41,7 +41,7 @@ $student-info-image: url('/assets/img/team_5.jpg');
 }
 
 .contact-info-background {
-  background: $contact-image bottom / cover
+  background: $contact-image center / cover
 }
 
 //heading
